--- a/expense_alt.css
+++ b/expense_alt.css
@@ -70,12 +70,18 @@ th {
 .balance-box {
   border: 1px solid #eeeceb;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 8px;
+
   border-radius: 3px;
   margin-bottom: 15px;
-  width: 50%;
+  padding: 8px;
+  /*width: 50%;
   min-width: 120px;
+  padding: 8px;
+  */
+
   text-align: center;
+  width: 100%;
+  box-sizing: border-box;
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -109,6 +115,10 @@ th {
     max-width: 95%;
   }
 
+  body {
+    padding: 10px;
+  }
+
   th, td {
     white-space: normal;
     font-size: 13px;
@@ -116,6 +126,8 @@ th {
 
   .balance-box {
     width: 100%;
+ 
+
   }
 
   .bal-container {
