--- a/expenses.css
+++ b/expenses.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -7,8 +9,8 @@ body {
   font-family: 'Trebuchet MS', Arial, sans-serif;
   margin: 0;
   padding: 20px;
-  background-color: #ffffff;
   overflow-x: hidden;
+  background-color: #f4f6f8;
 }
 
 .container {
@@ -16,8 +18,10 @@ body {
   padding: 20px;
   margin: 0 auto;
   background-color: rgba(223, 210, 20, 0.5);
+  /*will apply new container color later*/
   border-radius: 5px;
-  box-shadow: 10px 10px 5px rgba(138, 96, 19, 0.75);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+
 }
 
 h1 {
@@ -35,7 +39,8 @@ table {
   border: 2px solid rgba(138, 96, 19, 0.75);
 }
 
-th, td {
+th,
+td {
   padding: 10px;
   border-bottom: 1px solid rgba(138, 96, 19, 0.75);
   text-align: left;
@@ -69,7 +74,7 @@ th {
   text-decoration: line-through;
   color: #a00000;
   font-style: italic;
-   transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .waste-icon {
@@ -80,18 +85,12 @@ th {
 .balance-box {
   border: 1px solid #eeeceb;
   background-color: rgba(0, 0, 0, 0.7);
-
   border-radius: 3px;
   margin-bottom: 15px;
   padding: 8px;
-  /*width: 50%;
-  min-width: 120px;
-  padding: 8px;
-  */
-
   text-align: center;
   width: 100%;
-  box-sizing: border-box;
+
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -102,8 +101,6 @@ th {
   justify-content: space-between;
   width: 100%;
   gap: 10px;
-
- 
 }
 
 .bal-container button {
@@ -120,28 +117,17 @@ th {
 
 .bal-container button:hover {
   background-color: #af7a28;
+   transition: background-color 0.3s ease;
 }
 
 @media screen and (max-width: 600px) {
-  .container {
-    max-width: 95%;
-  }
 
   body {
     padding: 10px;
   }
 
-  th, td {
-    white-space: normal;
-    font-size: 13px;
-  }
-
-
-
   .balance-box {
     width: 100%;
- 
-
   }
 
   .bal-container button {
