--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@ body {
   font-family: 'Trebuchet MS', Arial, sans-serif;
   margin: 5px;
   padding: 5px;
-  background-color: rgba(223, 210, 20, 0.5);
+  /*background-color: rgba(223, 210, 20, 0.5); */
+  background-color: #f4f6f8;
 }
 
 .container {
@@ -12,7 +13,9 @@ body {
   padding: 20px;
   margin: 0 auto;
   border-radius: 5px;
-  box-shadow: 10px 10px 5px 0px rgba(138, 96, 19, 0.75);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+
+  background-color: #ffffff; /* Alternative Color*/
 
 }
 
@@ -138,6 +141,7 @@ button[type="button"]:hover {
   text-decoration: none;
   transition: all 0.3s ease;
   width: 100%;
+  
 }
 
 .past-expenses-btn:hover {
@@ -177,9 +181,8 @@ button[type="button"]:hover {
 }
 
 @media (max-width: 768px) {
-  .container {
-    max-width: 90%;
-  }
+
+  
 
   .bal-container {
     flex-direction: row;
