--- a/expenses.css
+++ b/expenses.css
@@ -120,6 +120,32 @@ th {
    transition: background-color 0.3s ease;
 }
 
+
+
+.go-home-btn {
+  display: block;
+  padding: 10px;
+  border: none;
+  color: rgba(0, 0, 0, 0.877);
+  border-radius: 3px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #ffffff;
+  font-weight: bold;
+  font-size: 14px;
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+.go-home-btn:hover {
+  background-color: #dfd9d9;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
 @media screen and (max-width: 600px) {
 
   body {
