--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 
 body {
@@ -14,7 +19,6 @@ body {
   margin: 0 auto;
   border-radius: 5px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
-
   background-color: #ffffff; /* Alternative Color*/
 
 }
@@ -182,6 +186,7 @@ button[type="button"]:hover {
   color: white;
   padding: 5px 10px;
   cursor: pointer;
+  border-radius: 3px;
 }
 
 
@@ -230,7 +235,11 @@ button[type="button"]:hover {
 }
 
 
-
+#success-message {
+  display: none;
+  text-align: center;
+  color: rgb(238, 238, 238);
+}
 
 
 @media (max-width: 768px) {
